WIP liquid image grid

--- a/_sass/yolo/_flexbox.scss
+++ b/_sass/yolo/_flexbox.scss
@@ -54,7 +54,7 @@ $column-gap: 0.50rem !default;
 
 .cell.is-primary {
   background-color: $yolo-accent-color;
-  color: $yolo-text-primary-color;
+  color: $yolo-text-dark-color;
 }
 
 .cell.is-circle-64 {
