--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,7 @@
 .code-header {
   width: 100%;
   font-family: $family-secondary;
+  font-weight: bold;
   padding: 0.3em 0.3em 0.3em 0.4em;
   vertical-align: middle;
   background-color: $yolo-table-header-color;
