--- a/_sass/yolo/themes/_arcade.scss
+++ b/_sass/yolo/themes/_arcade.scss
@@ -15,3 +15,34 @@ $text-secondary-color: #ff31b9 !default;
 $text-color: #adfff5 !default;
 $text-code-color: #65e9fc !default;
 $header-text-color: #0ad276 !default;
+
+
+$yolo-primary-color: #000928 !default;
+$yolo-secondary-color: #3e1d9d !default;
+
+// base colors
+$yolo-background-color: #000928 !default;
+$yolo-text-primary-color: #adfff5 !default;
+$yolo-text-secondary-color: #ff31b9 !default;
+$yolo-text-accent-color: #00b0ff !default;
+
+// convenient colors
+$yolo-text-dark-color: #000d55 !default;
+$yolo-text-light-color: #eab0d2 !default;
+$yolo-dark-color: #00080f !default;
+$yolo-light-color: #a5abf9 !default;
+$yolo-accent-color: #00b0ff !default;
+
+// code colors
+$yolo-code-background-color: #00080f !default;
+$yolo-code-primary-color: #65e9fc !default;
+$yolo-code-secondary-color: #30ea7d !default;
+
+// element colors
+$yolo-link-color: #00b0ff !default;
+$yolo-header-color: #0ad276 !default;
+$yolo-pill-color: #342077 !default;
+$yolo-pill-text-color: #9ce9fb !default;
+$yolo-table-header-color: #adfff5 !default;
+$yolo-table-border-color: #adfff5 !default;
+$yolo-table-header-text-color: #000928 !default;
