--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -1,17 +1,32 @@
 // ----------------------------------------------------------------------------
 // corbs theme
 // ----------------------------------------------------------------------------
-$base-color: #000d55 !default;
-$secondary-color: #342077 !default;
+$yolo-primary-color: #000d55 !default;
+$yolo-secondary-color: #342077 !default;
 
-$background-color: #030f4b;
-$background-darker-color: #020827 !default;
+// base colors
+$yolo-background-color: #030f4b !default;
+$yolo-text-primary-color: #ff31b9 !default;
+$yolo-text-secondary-color: #c21d8a !default;
+$yolo-text-accent-color: #00b0ff !default;
 
-$accent-color: #00b0ff !default;
+// convenient colors
+$yolo-text-dark-color: #000d55 !default;
+$yolo-text-light-color: #ff80cd !default;
+$yolo-dark-color: #020827 !default;
+$yolo-light-color: #7a85ff !default;
+$yolo-accent-color: #00b0ff !default;
 
-$code-background-color: #061039 !default;
+// code colors
+$yolo-code-background-color: #061039 !default;
+$yolo-code-primary-color: #65e9fc !default;
+$yolo-code-secondary-color: #30ea7d !default;
 
-$text-secondary-color: #c21d8a !default;
-$text-color: #ff31b9 !default;
-$text-code-color: #65e9fc !default;
-$header-text-color: #00e5ff !default;
+// element colors
+$yolo-link-color: #00b0ff !default;
+$yolo-header-color: #00e5ff !default;
+$yolo-pill-color: #342077 !default;
+$yolo-pill-text-color: #9ce9fb !default;
+$yolo-table-header-color: #ff31b9 !default;
+$yolo-table-border-color: #ff31b9 !default;
+$yolo-table-header-text-color: #000d55 !default;
