--- a/_sass/yolo/_images.scss
+++ b/_sass/yolo/_images.scss
@@ -36,9 +36,10 @@ img {
     height: $thumbnail-width;
     border-radius: .128em;
     &.max {
-      width: nth($ratio-1-by-1, -1) * 1px;
-      height: nth($ratio-1-by-1, -1) * 1px;
       border-radius: #{nth($ratio-1-by-1, -1) / 1000}em;
+      width: 100%;
+      height: 100%;
+      aspect-ratio: 1/1;
     }
   }
   &.circle {
@@ -52,9 +53,10 @@ img {
       object-fit: cover;
       border-radius: #{$dimension / 1000}em;
       &.max {
-        width: nth($ratio-1-by-1, -1) * 1px;
-        height: nth($ratio-1-by-1, -1) * 1px;
         border-radius: #{nth($ratio-1-by-1, -1) / 1000}em;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1/1;
       }
     }
   }
@@ -66,9 +68,10 @@ img {
       object-fit: cover;
       border-radius: #{$dimension / 1000}em;
       &.max {
-        width: nth($ratio-1-by-1, -1) * 1px;
-        height: nth($ratio-1-by-1, -1) * 1px;
         border-radius: #{nth($ratio-1-by-1, -1) / 1000}em;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1/1;
       }
     }
   }
@@ -80,9 +83,11 @@ img {
       object-fit: cover;
       border-radius: #{$dimension / 1000}em;
       &.max {
-        width: nth($ratio-4-by-3, -1) * 1px;
-        height: nth($ratio-3-by-4, -1) * 1px;
         border-radius: #{nth($ratio-4-by-3, -1) / 1000}em;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 4/3;
+        object-fit: cover;
       }
     }
   }
@@ -94,9 +99,11 @@ img {
       object-fit: cover;
       border-radius: #{$dimension / 1000}em;
       &.max {
-        width: nth($ratio-3-by-4, -1) * 1px;
-        height: nth($ratio-4-by-3, -1) * 1px;
         border-radius: #{nth($ratio-3-by-4, -1) / 1000}em;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 3/4;
+        object-fit: cover;
       }
     }
   }
@@ -108,9 +115,11 @@ img {
       object-fit: cover;
       border-radius: #{$dimension / 1000}em;
       &.max {
-        width: nth($ratio-16-by-9, -1) * 1px;
-        height: nth($ratio-9-by-16, -1) * 1px;
         border-radius: #{nth($ratio-16-by-9, -1) / 1000}em;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 16/9;
+        object-fit: cover;
       }
     }
   }
@@ -122,9 +131,11 @@ img {
       object-fit: cover;
       border-radius: #{$dimension / 1000}em;
       &.max {
-        width: nth($ratio-9-by-16, -1) * 1px;
-        height: nth($ratio-16-by-9, -1) * 1px;
         border-radius: #{nth($ratio-9-by-16, -1) / 1000}em;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 9/16;
+        object-fit: cover;
       }
     }
   }
@@ -136,8 +147,9 @@ img {
       object-fit: cover;
       border-radius: 50%;
       &.max {
-        width: nth($ratio-1-by-1, -1) * 1px;
-        height: nth($ratio-1-by-1, -1) * 1px;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1/1;
       }
     }
   }
