--- a/_includes/colors.html
+++ b/_includes/colors.html
@@ -1,3 +1,7 @@
+<!--
+  The colors.html template is for demonstrating theme colors on example index.md,
+  and NOT intended to be a reusable template.
+-->
 <div class="columns">
     <div class="column">
         <div class="cell is-circle-64 yolo-primary-color">&nbsp;</div>
