WIP theme color values

--- a/_sass/yolo/_typography.scss
+++ b/_sass/yolo/_typography.scss
@@ -1,4 +1,4 @@
-@import "utilities/mixins";
+//@import "utilities/mixins";
 
 $sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 $size-7 !default;
 
