--- a/_sass/yolo/_variables.scss
+++ b/_sass/yolo/_variables.scss
@@ -23,7 +23,7 @@ $base0f: #C1291C !default;
 $family-primary: "Inconsolata", sans-serif !default;
 $family-secondary: "Montserrat", sans-serif !default;
 $family-monospace: "Source Code Pro", monospace !default;
-$family-code: $family-monospace;
+$family-code: "Source Code Pro", monospace !default;
 
 $size-1: 3rem !default;
 $size-2: 2.5rem !default;
