--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -30,3 +30,9 @@ $yolo-pill-text-color: #9ce9fb !default;
 $yolo-table-header-color: #ff31b9 !default;
 $yolo-table-border-color: #ff31b9 !default;
 $yolo-table-header-text-color: #000d55 !default;
+
+// fonts
+$family-primary: "Red Hat Mono", sans-serif;
+$family-secondary: "Open Sans", sans-serif;
+$family-monospace: "Red Hat Mono", monospace;
+$family-code: "Red Hat Mono", monospace;
