--- a/_sass/yolo/_container.scss
+++ b/_sass/yolo/_container.scss
@@ -1,4 +1,4 @@
-@import "utilities/mixins";
+//@import "utilities/mixins";
 
 $container-offset: (2 * $gap) !default;
 $container-max-width: $fullhd !default;
