--- a/_sass/yolo/_flexbox.scss
+++ b/_sass/yolo/_flexbox.scss
@@ -1,5 +1,5 @@
-@import "utilities/mixins";
-@import "utilities/functions";
+//@import "utilities/mixins";
+//@import "utilities/functions";
 
 $column-gap: 0.50rem !default;
 
