WIP remove unused scss, html, js, enhance index.md

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -1,91 +1,43 @@
 <h3>Three families</h3>
 
 <ul class="no-bullets">
-    <li class="is-family-primary">
-        Primary Font Family
-    </li>
-    <li class="is-family-secondary">
-        Secondary Font Family
-    </li>
-    <li class="is-monospaced-font">
-        Monospaced Font Family
-    </li>
+    <li class="is-family-primary">Primary Font Family</li>
+    <li class="is-family-secondary">Secondary Font Family</li>
+    <li class="is-monospaced-font">Monospaced Font Family</li>
 </ul>
 
 <h3>Primary</h3>
 
 <ul class="no-bullets">
-    <li class="is-family-primary is-size-7">
-        This is-size-7 text.
-    </li>
-    <li class="is-family-primary is-size-6">
-        This is-size-6 text.
-    </li>
-    <li class="is-family-primary is-size-5">
-        This is-size-5 text.
-    </li>
-    <li class="is-family-primary is-size-4">
-        This is-size-4 text.
-    </li>
-    <li class="is-family-primary is-size-3">
-        This is-size-3 text.
-    </li>
-    <li class="is-family-primary is-size-2">
-        This is-size-2 text.
-    </li>
-    <li class="is-family-primary is-size-1">
-        This is-size-1 text.
-    </li>
+    <li class="is-family-primary is-size-7">This is-size-7 text.</li>
+    <li class="is-family-primary is-size-6">This is-size-6 text.</li>
+    <li class="is-family-primary is-size-5">This is-size-5 text.</li>
+    <li class="is-family-primary is-size-4">This is-size-4 text.</li>
+    <li class="is-family-primary is-size-3">This is-size-3 text.</li>
+    <li class="is-family-primary is-size-2">This is-size-2 text.</li>
+    <li class="is-family-primary is-size-1">This is-size-1 text.</li>
 </ul>
 
 <h3>Secondary</h3>
 
 <ul class="no-bullets">
-    <li class="is-family-secondary is-size-7">
-        This is-size-7 text.
-    </li>
-    <li class="is-family-secondary is-size-6">
-        This is-size-6 text.
-    </li>
-    <li class="is-family-secondary is-size-5">
-        This is-size-5 text.
-    </li>
-    <li class="is-family-secondary is-size-4">
-        This is-size-4 text.
-    </li>
-    <li class="is-family-secondary is-size-3">
-        This is-size-3 text.
-    </li>
-    <li class="is-family-secondary is-size-2">
-        This is-size-2 text.
-    </li>
-    <li class="is-family-secondary is-size-1">
-        This is-size-1 text.
-    </li>
+    <li class="is-family-secondary is-size-7">This is-size-7 text.</li>
+    <li class="is-family-secondary is-size-6">This is-size-6 text.</li>
+    <li class="is-family-secondary is-size-5">This is-size-5 text.</li>
+    <li class="is-family-secondary is-size-4">This is-size-4 text.</li>
+    <li class="is-family-secondary is-size-3">This is-size-3 text.</li>
+    <li class="is-family-secondary is-size-2">This is-size-2 text.</li>
+    <li class="is-family-secondary is-size-1">This is-size-1 text.</li>
 </ul>
 
 <h3>Monospace</h3>
 
 <ul class="no-bullets">
-    <li class="is-family-monospace is-size-7">
-        This is-size-7 text.
-    </li>
-    <li class="is-family-monospace is-size-6">
-        This is-size-6 text.
-    </li>
-    <li class="is-family-monospace is-size-5">
-        This is-size-5 text.
-    </li>
-    <li class="is-family-monospace is-size-4">
-        This is-size-4 text.
-    </li>
-    <li class="is-family-monospace is-size-3">
-        This is-size-3 text.
-    </li>
-    <li class="is-family-monospace is-size-2">
-        This is-size-2 text.
-    </li>
-    <li class="is-family-monospace is-size-1">
-        This is-size-1 text.
-    </li>
+    <li class="is-family-monospace is-size-7">This is-size-7 text.</li>
+    <li class="is-family-monospace is-size-6">This is-size-6 text.</li>
+    <li class="is-family-monospace is-size-5">This is-size-5 text.</li>
+    <li class="is-family-monospace is-size-4">This is-size-4 text.</li>
+    <li class="is-family-monospace is-size-3">This is-size-3 text.</li>
+    <li class="is-family-monospace is-size-2">This is-size-2 text.</li>
+    <li class="is-family-monospace is-size-1">This is-size-1 text.</li>
 </ul>
