--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -5,7 +5,7 @@ $yolo-primary-color: #000d55 !default;
 $yolo-secondary-color: #342077 !default;
 
 // base colors
-$yolo-background-color: #030f4b !default;
+$yolo-background-color: #061039 !default;
 $yolo-text-primary-color: #ff31b9 !default;
 $yolo-text-secondary-color: #c21d8a !default;
 $yolo-text-accent-color: #00b0ff !default;
@@ -18,7 +18,7 @@ $yolo-light-color: #7a85ff !default;
 $yolo-accent-color: #00b0ff !default;
 
 // code colors
-$yolo-code-background-color: #061039 !default;
+$yolo-code-background-color: #000928 !default;
 $yolo-code-primary-color: #65e9fc !default;
 $yolo-code-secondary-color: #30ea7d !default;
 
@@ -33,6 +33,6 @@ $yolo-table-header-text-color: #000d55 !default;
 
 // fonts
 $family-primary: "Red Hat Mono", sans-serif;
-$family-secondary: "Open Sans", sans-serif;
+$family-secondary: "Raleway", sans-serif;
 $family-monospace: "Red Hat Mono", monospace;
 $family-code: "Red Hat Mono", monospace;
