--- a/css/main.scss
+++ b/css/main.scss
@@ -92,3 +92,34 @@ ul.no-bullets {
     transform: rotate(359deg);
   }
 }
+
+.yolo-primary-color {
+  color: $yolo-primary-color;
+}
+.yolo-secondary-color {
+  color: $yolo-secondary-color;
+}
+.yolo-background-color {
+  color: $yolo-background-color;
+}
+.yolo-dark-color {
+  color: $yolo-dark-color;
+}
+.yolo-accent-color {
+  color: $yolo-accent-color;
+}
+.yolo-code-background-color {
+  color: $yolo-code-background-color;
+}
+.yolo-text-secondary-color {
+  color: $yolo-text-secondary-color;
+}
+.yolo-text-primary-color {
+  color: $yolo-text-primary-color;
+}
+.yolo-header-color {
+  color: $yolo-header-color;
+}
+.yolo-code-primary-color {
+  color: $yolo-code-primary-color;
+}
