--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -1,3 +1,7 @@
+<!--
+  This template is for demonstrating theme fonts on example index.md,
+  and not intended to be a reusable template.
+-->
 <h3>Three families</h3>
 
 <ul class="no-bullets">
