--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -7,7 +7,7 @@ $yolo-secondary-color: #342077 !default;
 // base colors
 $yolo-background-color: #061039 !default;
 $yolo-text-primary-color: #ff31b9 !default;
-$yolo-text-secondary-color: #c21d8a !default;
+$yolo-text-secondary-color: #7a85ff !default;
 $yolo-text-accent-color: #00b0ff !default;
 
 // convenient colors
