--- a/_includes/colors.html
+++ b/_includes/colors.html
@@ -1,6 +1,6 @@
 <!--
   The colors.html template is for demonstrating theme colors on example index.md,
-  and NOT intended to be a reusable template.
+  and not intended to be a reusable template.
 -->
 <div class="columns">
     <div class="column">
