--- a/_includes/image/lightbox.html
+++ b/_includes/image/lightbox.html
@@ -11,7 +11,7 @@
         {% assign idx = i | times: lb_images_per_column | plus: j %}
         {% assign lb_image = lb_images[idx] %}
         <img class="lb-square lb-hover-shadow"
-             onclick="openModal();currentSlide({{ idx }});"
+             onclick="Yolo.lightbox('{{ lb_data }}').openModal();Yolo.lightbox('{{ lb_data }}').currentSlide({{ idx }});"
              alt="{{ lb_image.description }}"
              src="{{ lb_image.src }}">
         {% endfor %}
@@ -19,8 +19,8 @@
     {% endfor %}
 </div>
 <!-- The lb-modal -->
-<div id="lb-modal" class="lb-modal">
-    <span class="lb-close cursor" onclick="closeModal()">&times;</span>
+<div id="lb-modal-{{ lb_data }}" class="lb-modal">
+    <span class="lb-close cursor" onclick="Yolo.lightbox('{{ lb_data }}').closeModal();">&times;</span>
     <div class="lb-modal-content">
         {% for lb_image in lb_images %}
         <div class="lb-slides">
@@ -30,11 +30,11 @@
         </div>
         {% endfor %}
         <!-- Next/previous controls -->
-        <a class="lb-nav lb-prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="lb-nav lb-next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="lb-nav lb-prev" onclick="Yolo.lightbox('{{ lb_data }}').plusSlides(-1);">&#10094;</a>
+        <a class="lb-nav lb-next" onclick="Yolo.lightbox('{{ lb_data }}').plusSlides(1);">&#10095;</a>
     </div>
     <!-- Caption text -->
     <div class="lb-caption-container">
-        <p id="lb-caption"></p>
+        <p id="lb-caption-{{ lb_data }}"></p>
     </div>
 </div>
