--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -24,7 +24,7 @@ $yolo-code-secondary-color: #30ea7d !default;
 
 // element colors
 $yolo-link-color: #00b0ff !default;
-$yolo-header-color: #00e5ff !default;
+$yolo-header-color: #65e9fc !default;
 $yolo-pill-color: #342077 !default;
 $yolo-pill-text-color: #9ce9fb !default;
 $yolo-table-header-color: #ff31b9 !default;
