--- a/_sass/yolo/_syntax.scss
+++ b/_sass/yolo/_syntax.scss
@@ -14,8 +14,6 @@ pre {
 div.highlighter-rouge,
 figure.highlight {
   position: relative;
-  margin-bottom: 1em;
-  padding-top: 0.5em;
   border-bottom-right-radius: 0.3em;
   border-bottom-left-radius: 0.3em;
   background: $yolo-code-background-color;
@@ -26,6 +24,8 @@ figure.highlight {
   > pre,
   pre.highlight {
     margin-left: 1em;
+    padding-bottom: .5em;
+    padding-top: .5em;
   }
 }
 
@@ -380,12 +380,5 @@ figure.highlight {
   .il {
     /* Literal.Number.Integer.Long */
     color: $base09;
-  }
-}
-
-.gist {
-  th,
-  td {
-    border-bottom: 0;
   }
 }
