--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -19,12 +19,12 @@ $yolo-accent-color: #00b0ff !default;
 
 // code colors
 $yolo-code-background-color: #000928 !default;
-$yolo-code-primary-color: #65e9fc !default;
-$yolo-code-secondary-color: #30ea7d !default;
+$yolo-code-primary-color: #30ea7d !default;
+$yolo-code-secondary-color: #65e9fc !default;
 
 // element colors
-$yolo-link-color: #00b0ff !default;
-$yolo-header-color: #a5b4f8 !default;
+$yolo-link-color: #65e9fc !default;
+$yolo-header-color: #00b0ff !default;
 $yolo-pill-color: #342077 !default;
 $yolo-pill-text-color: #9ce9fb !default;
 $yolo-table-header-color: #ff31b9 !default;
@@ -32,7 +32,7 @@ $yolo-table-border-color: #ff31b9 !default;
 $yolo-table-header-text-color: #000d55 !default;
 
 // fonts
-$family-primary: "Red Hat Mono", sans-serif;
+$family-primary: "Roboto Mono", sans-serif;
 $family-secondary: "Raleway", sans-serif;
 $family-monospace: "Red Hat Mono", monospace;
 $family-code: "Red Hat Mono", monospace;
