Added config for images to be pulled from external source, added prezos for Google Slides, removed images from assets, except site images, bump version to v1.7

--- a/_sass/yolo/_normalize.scss
+++ b/_sass/yolo/_normalize.scss
@@ -302,6 +302,15 @@ svg:not(:root) {
     overflow: hidden;
 }
 
+/**
+ * iframe reset addition.
+ */
+iframe {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
 /* Forms
    ========================================================================== */
 
