WIP sidebar toc option

--- a/_sass/yolo/_base.scss
+++ b/_sass/yolo/_base.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// Base elements stylesheet
+// base elements stylesheet
 // ----------------------------------------------------------------------------
 html {
   font: 16px/1.5 $family-primary, sans-serif;
