--- a/_sass/yolo/_container.scss
+++ b/_sass/yolo/_container.scss
@@ -1,5 +1,6 @@
-//@import "utilities/mixins";
-
+// ----------------------------------------------------------------------------
+// container stylesheet
+// ----------------------------------------------------------------------------
 $container-offset: (2 * $gap) !default;
 $container-max-width: $fullhd !default;
 
