--- a/_sass/yolo/_flexbox.scss
+++ b/_sass/yolo/_flexbox.scss
@@ -1,6 +1,6 @@
-//@import "utilities/mixins";
-//@import "utilities/functions";
-
+// ----------------------------------------------------------------------------
+// flexbox stylesheet
+// ----------------------------------------------------------------------------
 $column-gap: 0.50rem !default;
 
 .cell {
