--- a/_sass/yolo/_header.scss
+++ b/_sass/yolo/_header.scss
@@ -1,3 +1,6 @@
+// ----------------------------------------------------------------------------
+// header stylesheet
+// ----------------------------------------------------------------------------
 .header {
   .logo {
     border-radius: 50%;
