--- a/_sass/yolo/_lightbox.scss
+++ b/_sass/yolo/_lightbox.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// Styles for lightbox
+// lightbox stylesheet
 // ----------------------------------------------------------------------------
 .lb-square {
   width: 100%;
