--- a/_sass/yolo/_prezos.scss
+++ b/_sass/yolo/_prezos.scss
@@ -1,3 +1,6 @@
+// ----------------------------------------------------------------------------
+// prezos stylesheet
+// ----------------------------------------------------------------------------
 .prezo-iframe-container {
   position: relative;
   overflow: hidden;
