--- a/_sass/yolo/_tables.scss
+++ b/_sass/yolo/_tables.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// Table styling
+// tables styling
 // ----------------------------------------------------------------------------
 table {
   width: 100%;
