--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@
 @import "yolo/typography";
 @import "yolo/flexbox";
 @import "yolo/container";
+@import "yolo/sidebar";
 @import "yolo/tables";
 @import "yolo/header";
 @import "yolo/images";
