--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 {% include head.html %}
 <body>
   <div class="container">
+    {% include sidebar.html %}
     {% include header.html %}
     {{ content }}
     {% include footer.html %}
