--- a/_sass/yolo/_typography.scss
+++ b/_sass/yolo/_typography.scss
@@ -1,5 +1,6 @@
-//@import "utilities/mixins";
-
+// ----------------------------------------------------------------------------
+// typography stylesheet
+// ----------------------------------------------------------------------------
 $sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 $size-7 !default;
 
 @mixin typography-size($target:'') {
