--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,7 @@
-<div class="sidebar-toggle">
-    <span id="toggle" class="toggle">&#9776;</span>
-</div>
-
 <div id="sidebar" class="sidebar">
     <div class="inner">
         <nav id="sidebar-nav">
-            <ul id="sidebar-nav-links" class="links">
+            <ul id="sidebar-nav-links">
                 <li>
                     <a href="./">
                         <span>{{ site.tag_text }}</span>
