--- a/_sass/yolo/_sidebar.scss
+++ b/_sass/yolo/_sidebar.scss
@@ -1,46 +1,41 @@
 // ----------------------------------------------------------------------------
 // sidebar stylesheet
 // ----------------------------------------------------------------------------
-.sidebar-toggle {
-  .toggle {
-    position: absolute;
-    right: 0;
-    color: $yolo-accent-color;
-    font-size: 40px;
-    cursor: default;
-    transition: 0.3s;
-  }
-  .toggle:hover,
-  .toggle:focus {
-    color: $yolo-text-primary-color;
-    text-decoration: none;
-    cursor: pointer;
-  }
-}
 .sidebar {
   position: fixed;
   z-index: 50;
+  float: left;
   top: 0;
   left: 0;
-  width: 0;
+  width: 1rem;
   height: 100%;
   overflow-x: hidden;
   transition: 0.5s;
 
+  &:is(:hover) {
+    cursor: pointer;
+  }
+
   > .inner {
     width: 100%;
     height: 100%;
-    padding: 1.5em;
+    padding: 1.5em .5em;
     background-color: $yolo-dark-color;
     overflow-x: hidden;
-  }
 
-  .links {
-    margin-bottom: 1.5rem;
-    padding-bottom: 0.5rem;
-    line-height: 1;
-    li {
-      margin-bottom: 1rem;
+    nav {
+      ul {
+        line-height: 1;
+        list-style-type: none;
+        margin-bottom: 1.5rem;
+        padding-bottom: 0.5rem;
+        li {
+          margin-bottom: 1rem;
+        }
+        li:before {
+          content: "-";
+        }
+      }
     }
   }
 }
