--- a/_sass/yolo/_sidebar.scss
+++ b/_sass/yolo/_sidebar.scss
@@ -11,7 +11,14 @@
   height: 100%;
   overflow-x: hidden;
   transition: 0.5s;
-
+  background-color: $yolo-sidebar-color;
+  border-right-color: $yolo-sidebar-border-right-color;
+  border-left-color: $yolo-sidebar-border-left-color;;
+  border-style: solid;
+  border-right-width: .5rem;
+  border-left-width: .5rem;
+  border-top-width: 0;
+  border-bottom: 0;
   &:is(:hover) {
     cursor: pointer;
   }
@@ -20,7 +27,6 @@
     width: 100%;
     height: 100%;
     padding: 1.5em .5em;
-    background-color: $yolo-dark-color;
     overflow-x: hidden;
 
     nav {
@@ -28,12 +34,13 @@
         line-height: 1;
         list-style-type: none;
         margin-bottom: 1.5rem;
-        padding-bottom: 0.5rem;
+        //padding-bottom: 0.5rem;
+        padding: 1rem;
         li {
           margin-bottom: 1rem;
         }
         li:before {
-          content: "-";
+          content: "- ";
         }
       }
     }
