--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -23,6 +23,9 @@ $yolo-code-primary-color: #30ea7d !default;
 $yolo-code-secondary-color: #65e9fc !default;
 
 // element colors
+$yolo-sidebar-color: #020827 !default;
+$yolo-sidebar-border-right-color: #ff31b9 !default;
+$yolo-sidebar-border-left-color: #a3006b !default;
 $yolo-link-color: #65e9fc !default;
 $yolo-header-color: #00b0ff !default;
 $yolo-pill-color: #342077 !default;
