--- a/_sass/yolo/_container.scss
+++ b/_sass/yolo/_container.scss
@@ -6,11 +6,7 @@ $container-max-width: $fullhd !default;
 
 .container {
   flex-grow: 1;
-  //margin: 0 auto;
-  margin-top: 0px;
-  margin-right: auto;
-  margin-bottom: 0px;
-  margin-left: 1rem;
+  margin: 0 auto;
   padding-left: 1rem;
   padding-right: 1rem;
   position: relative;
