--- a/_sass/yolo/_container.scss
+++ b/_sass/yolo/_container.scss
@@ -1,6 +1,9 @@
 // ----------------------------------------------------------------------------
 // container stylesheet
 // ----------------------------------------------------------------------------
+@import "utilities/mixins";
+@import "variables";
+
 $container-offset: (2 * $gap) !default;
 $container-max-width: $fullhd !default;
 
