--- a/_sass/yolo/_lightbox.scss
+++ b/_sass/yolo/_lightbox.scss
@@ -1,6 +1,52 @@
 // ----------------------------------------------------------------------------
 // lightbox stylesheet
 // ----------------------------------------------------------------------------
+.lb-container {
+  flex-grow: 1;
+  margin: auto;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  position: relative;
+  width: 90%;
+}
+
+.lb-container.is-fluid {
+  max-width: none !important;
+  padding-left: 32px;
+  padding-right: 32px;
+  width: 100%;
+}
+
+@media screen and (min-width: 1024px) {
+  .lb-container {
+    max-width: 960px;
+  }
+}
+
+@media screen and (max-width: 1215px) {
+  .lb-container.is-widescreen:not(.is-max-desktop) {
+    max-width: 960px;
+  }
+}
+
+@media screen and (max-width: 1407px) {
+  .lb-container.is-fullhd:not(.is-max-desktop):not(.is-max-widescreen) {
+    max-width: 1024px;
+  }
+}
+
+@media screen and (min-width: 1216px) {
+  .lb-container:not(.is-max-desktop) {
+    max-width: 1024px;
+  }
+}
+
+@media screen and (min-width: 1408px) {
+  .lb-container:not(.is-max-desktop):not(.is-max-widescreen) {
+    max-width: 1024px;
+  }
+}
+
 .lb-square {
   width: 100%;
   aspect-ratio: 1/1;
@@ -21,7 +67,7 @@
   display: none;
   position: fixed;
   z-index: 1;
-  padding-top: 100px;
+  padding-top: 5rem;
   left: 0;
   top: 0;
   width: 100%;
@@ -34,17 +80,16 @@
   position: relative;
   margin: auto;
   padding: 0;
-  width: 80%;
+  width: 100%;
   max-width: 100%;
 }
 
 .lb-close {
   position: absolute;
-  top: 15px;
-  right: 35px;
+  top: 0.5rem;
+  right: 1.5rem;
   color: $yolo-accent-color;
-  font-size: 40px;
-  font-weight: bold;
+  font-size: $size-2;
   transition: 0.3s;
 }
 
@@ -69,16 +114,18 @@
   color: transparent;
   text-align: center;
   vertical-align: middle;
-  font-size: 20px;
+  font-size: $size-4;
   transition: 0.6s ease;
   user-select: none;
   -webkit-user-select: none;
+
   &:before {
     content: '';
     height: 100%;
     display: inline-block;
     vertical-align: middle;
   }
+
   &:hover {
     background-color: rgba($yolo-dark-color, 0.3);
     text-decoration: none;
@@ -90,15 +137,18 @@
   right: 0;
   border-radius: .3rem 0 0 .3rem;
   color: transparent;
+
   &:hover {
     color: $yolo-accent-color;
   }
 }
+
 .lb-next {
   left: 92%;
   right: 100%;
   border-radius: 0 .3rem .3rem 0;
   color: transparent;
+
   &:hover {
     color: $yolo-accent-color;
   }
