--- a/_sass/yolo/_base.scss
+++ b/_sass/yolo/_base.scss
@@ -2,13 +2,15 @@
 // base elements stylesheet
 // ----------------------------------------------------------------------------
 html {
-  font: 16px/1.5 $family-primary, sans-serif;
+  //font: 16px/1.5 $family-primary, sans-serif;
+  font-size: $size-6;
+  line-height: 1.5;
+  font-family: $family-primary;
 }
 
-// When the minimum screen width is 640px or wider then the font-size of the paragraph will change to 20px.
-@media (min-width: 768px) {
+@media (min-width: $tablet) {
   html {
-    font-size: 20px;
+    font-size: $size-5;
   }
 }
 
