--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@
 @import "yolo/flexbox";
 @import "yolo/container";
 @import "yolo/tables";
+@import "yolo/lists";
 @import "yolo/header";
 @import "yolo/images";
 @import "yolo/lightbox";
@@ -73,12 +74,6 @@
 
 .pill:hover {
   background-color: $yolo-accent-color;
-}
-
-ul.no-bullets {
-  list-style-type: none; /* Remove bullets */
-  padding: 0; /* Remove padding */
-  margin: 0; /* Remove margins */
 }
 
 .rotate {
